# cs283project

./: .gitignore  Readme  Readme.md  Readme.txt  record_hand_dataset.py  requirements.txt
.history/: Readme_20250515193113  Readme_20250515193116  Readme_20250515193123  Readme_20250515193135  Readme_20250515193142  Readme_20250515193146  Readme_20250515193151  Readme_20250515193155  Readme_20250515193200  Readme_20250515193232  Readme_20250515193234  Readme_20250515193235  Readme_20250515193241  Readme_20250515193242  Readme_20250515193248  Readme_20250515193252  Readme_20250515193253  Readme_20250515201306  Readme_20250515201307  Readme_20250515201323  Readme_20250515201326  Readme_20250515201328  Readme_20250515201335
.history/telekinesis/: arm_teleoperation_20250514161502.py  arm_teleoperation_20250515192740.py  arm_teleoperation_20250515192802.py  arm_teleoperation_20250515194459.py  arm_teleoperation_20250515194501.py  arm_teleoperation_20250515194503.py  arm_teleoperation_20250515194507.py  arm_teleoperation_20250515194510.py  arm_teleoperation_20250515194512.py  arm_teleoperation_20250515194514.py  arm_teleoperation_20250515194515.py  arm_teleoperation_20250515194927.py  arm_teleoperation_20250515195020.py  arm_teleoperation_20250515195910.py  arm_teleoperation_20250515200030.py  (+26 more)
arm_teleoperation/: CMakeLists.txt  README.md  package.xml
arm_teleoperation/launch/: arm_teleoperation.launch
arm_teleoperation/scripts/: arm_teleoperation_node.py
src/: arm_teleoperation_real.py  kinova_controller.py
src/telekinesis/: cam_K.txt  (+11 more)
trash/: a  b  c  d  prompt.md
(+25 files in other folders)
