<?xml version="1.0"?>
<package format="2">
    <name>arm_teleoperation</name>
    <version>0.0.1</version>
    <description>ROS package for teleoperating Kinova arm with Oculus controller</description>

    <maintainer email="user@todo.todo">user</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>

    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>python3-numpy</exec_depend>
    <exec_depend>python3-scipy</exec_depend>
    <exec_depend>python3-pybullet</exec_depend>
    <exec_depend>python3-pynput</exec_depend>

    <export>
    </export>
</package>
